--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "pug": "^3.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "shortid": "^2.2.17",
     "webpack": "^5.0.0",
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1"
