--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/throttler": "^5.0.0",
     "@nestjs/typeorm": "9.0.1",
     "@types/bcryptjs": "^2.4.2",
+    "axios": "^1.7.9",
     "bcryptjs": "2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
